# indiforgeai

./: Anchor.toml  index.css  index.html  package.json
programs/dataset-marketplace/: Cargo.toml
programs/dataset-marketplace/src/: lib.rs  lib.rs.backup
src/: App.tsx
src/components/: CreatorDashboard.tsx  DatasetCard.tsx  Header.tsx  LandingPage.tsx  Marketplace.tsx  PaymentModal.tsx  RoyaltyBreakdown.tsx  WalletButton.tsx
src/contexts/: WalletContext.tsx
src/contracts/: DatasetMarketplace.ts
src/hooks/: useDatasetMarketplace.ts  useSolanaPayment.ts
src/types/: License.ts
